Changelog for 2.0.12 
- Added real screen support
- Corrected lots of bugs with i10n
- Corrected bug in wlandecrypter bug
- Modified CDCMD to write in a logfile
- Changed config so it whould not use unstable functions by default
- Corrected lots of bugs in makefile, like having 755 permisions for screenrc file, $DESTDIR problems 
- Corrected more quoting problems :-)
- Added support for jazzteldecrypter

Changelog for 2.0.11
- Changed interface. Now it looks nicer.
- Now it advises you if you don't have some optional thing installed and try to exec it. 
- It doesnt allow you to do something if you've had to do something else before and you haven't (for example, doing a selection (2) befora a scan (1)
- Corrected some bugs
- Added support for gettext
- Added support for wlandecrypter
- Added an "Auto" function
- Added a "exit" function, asking user if he wants delete temporary directory and/or stop monitor mode on selected interface.
- Code cleaned and reorganised.
- Corrected lots of things in makefile
- Added a "critical debug command" (well... it echoes every terminal command instead of executing it, for terminal related errors)

Changelog for 2.0.10
- Added multiple terminal support
- Added theme support
- Added config file support
- Added aleatory temp dir creation
- Wrote a makefile for airoscript
- Corrected bug #521 (airopdate rt61 bug)

Changelog for 2.0.9
-fixed client and clientless attacks chopchop and frag packet injection not generating IVs because -h MAC was not set
-force frag, chopchop and aircrack-ng xterms to stay on screen after successfull command so you can see results
-cleaned the code some more
-cleaning functions needs more tweaks
-atheros users need to use options 9 (monitor mode) before other commands to create-destroys correct VAPS
-fixed "unary operator expected" msg (harmless bug) (not fully fixed because of "" generating errors in logic tests)