@@ -15,11 +15,18 @@ install:
 	@install -D -g $(UID) -o $(GID) -m $(BINMODE) $(CURDIR)/src/airoscript.conf        $(ETCDIR)/airoscript.conf
 	@install    -g $(UID) -o $(GID) -m $(BINMODE) $(CURDIR)/src/airopdate.sh           $(SHAREDIR)/airopdate
 	@install    -g $(UID) -o $(GID) -m $(BINMODE) $(CURDIR)/src/airoscfunc.sh          $(SHAREDIR)/airoscfunc.sh
+	@install    -g $(UID) -o $(GID) -m $(BINMODE) $(CURDIR)/src/airoscfunc_screen.sh   $(SHAREDIR)/airoscfunc_screen.sh
 	@install    -g $(UID) -o $(GID) -m $(BINMODE) $(CURDIR)/src/airoscfunc_unstable.sh $(SHAREDIR)/airoscfunc_unstable.sh
 	@install    -g $(UID) -o $(GID) -m 644        $(CURDIR)/src/screenrc               $(SHAREDIR)/screenrc
 	@msgfmt -o $(DESTDIR)/usr/share/locale/es/LC_MESSAGES/airoscript.mo $(CURDIR)/src/i10n/po/es_ES
 
 
+uninstall:
+	rm  $(SBINDIR)/airoscript
+	rm -r $(SHAREDIR)
+	rm $(ETCDIR)/airoscript.conf
+	rm $(DESTDIR)/usr/share/locale/es/LC_MESSAGES/airoscript.mo
+
 all: install 
 
-.PHONY: all install configure
+.PHONY: all install uninstall
