@@ -1,6 +1,5 @@
 #!/bin/bash
 # Showing options:
-lang="en_us" # This has no real effect yet
 TERMINAL="xterm" # This is the most used term, and the most tested. if you comment this line default x-terminal-emulator will be used
 
 # This way airoscript wont ask you for your resolution everytime executed.
@@ -65,6 +64,7 @@ UNSTABLE=0 # Disabled by default. If user wants this functions has to install 3r
 	WESSIDE=$SBINDIR"wesside-ng"
 	MDK3=$BINDIR"mdk3"
 	FUNCTIONS="/usr/share/airoscript/airoscfunc.sh"
+	SCREEN_FUNCTIONS="/usr/share/airoscript/airoscfunc_screen.sh"
 	UNSTABLEF="/usr/share/airoscript/airoscfunc_unstable.sh"
 
 #The path where the data is stored
